src/test/ui/generator/dropck.stderr
error[E0597]: `*cell` does not live long enough
  --> $DIR/dropck.rs:10:40
   |
LL |     let ref_ = Box::leak(Box::new(Some(cell.borrow_mut())));
   |                                        ^^^^ borrowed value does not live long enough
...
LL | }
   | - `*cell` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `ref_` does not live long enough
  --> $DIR/dropck.rs:15:18
   |
LL |     gen = || {
   |           -- capture occurs here
LL |         // but the generator can use it to drop a `Ref<'a, i32>`.
LL |         let _d = ref_.take(); //~ ERROR `ref_` does not live long enough
   |                  ^^^^ borrowed value does not live long enough
...
LL | }
   | - borrowed value dropped before borrower
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
